MDEV-20285 Wrong result on INSERT..SELECT when converting from SIGNED to UNSIGNED